--- a/package.json
+++ b/package.json
@@ -8,26 +8,29 @@
     "vuejs"
   ],
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "deploy-page": "gh-pages -d dist",
     "build-deploy": "yarn build && yarn deploy-page",
-    "build-lib": "vue-cli-service build --target lib --name vue-on-visible src/lib/index.js"
+    "build-lib": "vue-cli-service build --target lib --name vue-lazyload-video src/lib/index.js"
   },
   "dependencies": {
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "^2.7.0",
     "vue": "^2.5.17",
-    "vue-on-visible": "^0.5.2"
+    "vue-highlightjs": "^1.3.3",
+    "vue-on-intersect": "^0.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.4",
     "@vue/cli-plugin-eslint": "^3.0.4",
     "@vue/cli-service": "^3.0.4",
+    "bulma": "^0.7.1",
     "gh-pages": "^2.0.0",
+    "vue-sync-location": "^0.1.1",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
@@ -59,5 +62,10 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "main": "dist/vue-lazyload-video.common.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/adrienhobbs/vue-lazyload-video.git"
+  }
 }
