--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "^2.7.0",
+    "intersection-observer": "^0.5.0",
     "vue": "^2.5.17",
     "vue-highlightjs": "^1.3.3",
     "vue-on-intersect": "^0.1.1"
@@ -47,11 +48,7 @@
     }
   },
   "files": [
-    "dist/*",
-    "src/*",
-    "public/*",
-    "*.json",
-    "*.js"
+    "dist/*"
   ],
   "postcss": {
     "plugins": {
